--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,4 +29,14 @@
 
 		<button class="btn btn-primary" (click)="submit(form)">Submit</button>
 	</form>
+  
+  <form [formGroup]="form2">
+
+        <items-array
+            formArrayName="items"
+            [itemsFormArray]="form2.get('items')">
+        </items-array>
+
+        <button (click)="submit2(form2)">Submit</button>
+    </form>
 </div>
